--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <div id="body">
         <div id="left">
-            <img src="C:\Tewe22\Project\travel blog\asset\images\d.jpg" alt="" id="img">
+            <img src="d.jpg" alt="" id="img">
         </div>
         <div id="right">
             <center>
